--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     </nav>
 
     <!-- Hero Section -->
-    <div class="hero-gradient min-h-screen flex items-center sm:items-end pt-16">
+    <div class="hero-gradient min-h-screen flex items-center pt-16">
         <div class="container mx-auto px-4 py-20">
-            <div class="max-w-3xl sm:max-w-4xl text-center mx-auto">
+            <div class="max-w-3xl">
                 <h1 class="text-4xl md:text-6xl font-bold mb-6 fire-text">Thandava 2025</h1>
                 <p class="text-xl md:text-2xl mb-8 text-red-400">Where divine expressions meet mortal forms - Experience the mystical art of Kathakali</p>
                 <button class="bg-red-600 px-6 py-3 md:px-8 md:py-4 rounded-lg font-bold hover:bg-red-700 transition transform hover:scale-105">
